src/objects/CRM_Help__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>CRM_Help__c</referenceTo>
        <relationshipLabel>CRM Helps</relationshipLabel>
        <relationshipName>CRM_Helps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Help</fullName>
                </value>
                <value>
                    <fullName>Guide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CRM Help</label>
    <nameField>
        <label>CRM Help Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Helps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>